<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/appbar">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/heading_text_size"
            android:hint="@string/note_dialog_fragment_date_hint"
            android:inputType="none"
            android:editable="false"
            android:clickable="true"
            android:maxLines="1"
            android:importantForAutofill="noExcludeDescendants"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/transparent"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/heading_text_size"
            android:maxLength="100"
            android:maxLines="5"
            android:hint="@string/note_dialog_fragment_body_hint"
            android:inputType="text"
            android:importantForAutofill="noExcludeDescendants"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/ok_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/action_ok_button"
        />
</LinearLayout>