<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="ru.ikon.trainingdairy.ui.training.TrainingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_margin_double_double"
        android:elevation="4dp"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin_double_double">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginBottom="0dp"
                    app:errorEnabled="true"
                    android:hint="@string/training_fragment_edit_text_name"
                    style="@style/ToolBarInputStyle"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:importantForAutofill="noExcludeDescendants"
                        android:textSize="24sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/training_fragment_edit_text_date"
                    style="@style/ToolBarInputStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textSize="@dimen/heading_text_size"
                        android:inputType="none"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:editable="false"
                        android:importantForAutofill="noExcludeDescendants"
                        android:background="@android:color/transparent"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/comment_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin_half"
                    android:hint="@string/training_fragment_edit_text_comment"
                    style="@style/ToolBarInputStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textSize="@dimen/heading_text_size"
                        android:importantForAutofill="noExcludeDescendants"
                        android:background="@android:color/transparent"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/appbar"
            android:id="@+id/recycler_view_exercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="vertical"/>

        <RelativeLayout android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/empty_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/heading_text_size"
                android:text="@string/training_fragment_empty_title_text" />
        </RelativeLayout>

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="-28dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:tint="@android:color/white"
        app:tint="@android:color/white"
        app:srcCompat="@drawable/ic_playlist_add_check_white_24dp"
        app:fab_size="normal"
        android:elevation="8dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/appbar"/>

</RelativeLayout>